force-app/main/default/objects/Account/fields/AccountSourceId__c.field-meta.xml
<CustomField>
    <fullName>AccountSourceId__c</fullName>
    <externalId>true</externalId>
    <label>Account Source Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>