force-app/main/default/objects/Account/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source System Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>