force-app/main/default/objects/Account/fields/TopSecret__c.field-meta.xml
<CustomField>
    <fullName>TopSecret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Secret</label>
    <type>Checkbox</type>
</CustomField>